tests/snapshots/snapshots__scatter_palette_wrap.snap
---
source: tests/snapshots.rs
assertion_line: 249
expression: normalize_svg(svg)
---
<svg id="cc_000000" xmlns="http://www.w3.org/2000/svg" width="800" height="500" viewBox="0 0 800 500">
<rect x="0.00" y="0.00" width="800.00" height="500.00" fill="#FFFFFF"/>
<defs><clipPath id="cc_000000_clip"><rect x="70.00" y="50.00" width="700.00" height="390.00"/></clipPath></defs>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="245.00" y1="50.00" x2="245.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="420.00" y1="50.00" x2="420.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="595.00" y1="50.00" x2="595.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="770.00" y1="50.00" x2="770.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="375.00" x2="770.00" y2="375.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="310.00" x2="770.00" y2="310.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="245.00" x2="770.00" y2="245.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="180.00" x2="770.00" y2="180.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="115.00" x2="770.00" y2="115.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="50.00" x2="770.00" y2="50.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="70.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="70.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">0</text>
<line x1="245.00" y1="440.00" x2="245.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="245.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">2</text>
<line x1="420.00" y1="440.00" x2="420.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="420.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">4</text>
<line x1="595.00" y1="440.00" x2="595.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="595.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">6</text>
<line x1="770.00" y1="440.00" x2="770.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="770.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">8</text>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="65.00" y1="440.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="444.20" text-anchor="end" font-size="12" fill="#333333">0</text>
<line x1="65.00" y1="375.00" x2="70.00" y2="375.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="379.20" text-anchor="end" font-size="12" fill="#333333">2</text>
<line x1="65.00" y1="310.00" x2="70.00" y2="310.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="314.20" text-anchor="end" font-size="12" fill="#333333">4</text>
<line x1="65.00" y1="245.00" x2="70.00" y2="245.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="249.20" text-anchor="end" font-size="12" fill="#333333">6</text>
<line x1="65.00" y1="180.00" x2="70.00" y2="180.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="184.20" text-anchor="end" font-size="12" fill="#333333">8</text>
<line x1="65.00" y1="115.00" x2="70.00" y2="115.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="119.20" text-anchor="end" font-size="12" fill="#333333">10</text>
<line x1="65.00" y1="50.00" x2="70.00" y2="50.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="54.20" text-anchor="end" font-size="12" fill="#333333">12</text>
<g clip-path="url(#cc_000000_clip)">
<circle cx="70.00" cy="440.00" r="3.00" fill="#4C72B0" opacity="1.00"/>
<circle cx="157.50" cy="391.25" r="3.00" fill="#DD8452" opacity="1.00"/>
<circle cx="245.00" cy="342.50" r="3.00" fill="#55A868" opacity="1.00"/>
<circle cx="332.50" cy="293.75" r="3.00" fill="#C44E52" opacity="1.00"/>
<circle cx="420.00" cy="245.00" r="3.00" fill="#8172B3" opacity="1.00"/>
<circle cx="507.50" cy="196.25" r="3.00" fill="#937860" opacity="1.00"/>
<circle cx="595.00" cy="147.50" r="3.00" fill="#DA8BC3" opacity="1.00"/>
<circle cx="682.50" cy="98.75" r="3.00" fill="#8C8C8C" opacity="1.00"/>
<circle cx="770.00" cy="50.00" r="3.00" fill="#4C72B0" opacity="1.00"/>
</g>
<text x="400.00" y="30.00" text-anchor="middle" font-size="16" fill="#333333">Palette Wrap</text>
<text x="420.00" y="494.00" text-anchor="middle" font-size="12" fill="#333333">x</text>
<text x="24.50" y="245.00" text-anchor="middle" font-size="12" fill="#333333" transform="rotate(-90.00,24.50,245.00)" >y</text>
<rect x="778.00" y="50.00" width="12.00" height="12.00" fill="#4C72B0" rx="2.00"/>
<text x="794.00" y="59.60" text-anchor="start" font-size="12" fill="#333333">a</text>
<rect x="778.00" y="66.00" width="12.00" height="12.00" fill="#DD8452" rx="2.00"/>
<text x="794.00" y="75.60" text-anchor="start" font-size="12" fill="#333333">b</text>
<rect x="778.00" y="82.00" width="12.00" height="12.00" fill="#55A868" rx="2.00"/>
<text x="794.00" y="91.60" text-anchor="start" font-size="12" fill="#333333">c</text>
<rect x="778.00" y="98.00" width="12.00" height="12.00" fill="#C44E52" rx="2.00"/>
<text x="794.00" y="107.60" text-anchor="start" font-size="12" fill="#333333">d</text>
<rect x="778.00" y="114.00" width="12.00" height="12.00" fill="#8172B3" rx="2.00"/>
<text x="794.00" y="123.60" text-anchor="start" font-size="12" fill="#333333">e</text>
<rect x="778.00" y="130.00" width="12.00" height="12.00" fill="#937860" rx="2.00"/>
<text x="794.00" y="139.60" text-anchor="start" font-size="12" fill="#333333">f</text>
<rect x="778.00" y="146.00" width="12.00" height="12.00" fill="#DA8BC3" rx="2.00"/>
<text x="794.00" y="155.60" text-anchor="start" font-size="12" fill="#333333">g</text>
<rect x="778.00" y="162.00" width="12.00" height="12.00" fill="#8C8C8C" rx="2.00"/>
<text x="794.00" y="171.60" text-anchor="start" font-size="12" fill="#333333">h</text>
<rect x="778.00" y="178.00" width="12.00" height="12.00" fill="#4C72B0" rx="2.00"/>
<text x="794.00" y="187.60" text-anchor="start" font-size="12" fill="#333333">i</text>
</svg>
